--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.10.1",
+    "apollo-server-express": "1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "graphql-tools": "^4.0.7",
     "typescript": "^3.8.2"
   }
 }
