--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.10.1",
+    "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "typescript": "^3.8.2"
   }
