--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "graphql-server-starter",
+  "name": "apollo-graphql-starter",
   "version": "0.0.1",
   "description": "graphql-server-starter usage typescript",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
+    "dev": "node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
