--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "typescript": "^3.8.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@types/faker": "^4.1.10",
+    "nodemon": "^2.0.2"
   }
 }
