--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.7.2",
     "apollo-server": "^2.10.1",
     "apollo-server-express": "^2.10.1",
     "bcrypt": "^4.0.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -21,7 +25,10 @@
     "typescript": "^3.8.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
     "@types/faker": "^4.1.10",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^13.7.6",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2"
