--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
+    "prisma-client-lib": "^1.34.10",
     "typescript": "^3.8.2"
   },
   "devDependencies": {
